[package]
name = "canal"
version = "0.1.3"
authors = ["crhino <piraino.chris@gmail.com>"]

description = "A library for multithreaded concurrency primitives, including queues and channels."

repository = "https://github.com/crhino/canal"
documentation = "http://crhino.github.io/canal-docs/canal/index.html"

readme = "./README.md"
license = "BSD-3-Clause"
keywords = ["concurrency"]
